Working on layout

--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="main.css">
   <title>SALVADOR SERRUYA</title>
+  <script src="js/jquery-3.1.1.js"></script>
+  <script src="js/jquery-ui.js"></script>
+  <script src="js/portfolio.js"></script>
 </head>
 
 <body>
- 
-    <section class="sticky">
+
+  <section class="sticky">
     <div id="logo">
       <img src="nombre.svg" alt="Salvador Serruya" id="name">
     </div>
@@ -22,25 +25,37 @@
         <li class="project"><span></span></li>
       </ul>
     </div>
-    
+
     <div id="plusMenu">
       <img src="Symbol 2 – 1.svg" alt="menu">
     </div>
-    </section>
-    <div id="gridContainer">
-    <div class="bigRight"><img src="coleccion de material\casa_virasoro\360.jpg" alt="Project"></div>
-    <div class="smallLeft"><img src="coleccion de material\Mediateca\pp.jpg" alt="Project"></div>
-    <div class="smallRight pushDown"><img src="coleccion de material\MUARQ\SouthCargo\CAM 27-SNAPSHOT.jpg" alt="Project"></div>
-    <div class="bigLeft"><img src="coleccion de material/MUARQ/Renoir/HALL-09 PS.jpg" alt="Project"></div>
+  </section>
+  <div id="gridContainer">
 
-    <div class="smallLeft"><img src="coleccion de material/Monte Hermoso/baño ps.jpg" alt="Project"></div>
-    <div class="smallRight"><img src="coleccion de material/THE WALL/Algodon/IMG-20180614-WA0022.jpg" alt="Project"></div>
+    <div class="bigRight" id="project1">
+      <div class="filling">
+        <span class="projectName">CASA VIRASORO</span>
+      </div>
+    </div>
 
-    <div class="bigRight"><img src="coleccion de material/Monte Hermoso/PS final.jpg" alt="Project"></div>
-    <div class="bigLeft"><img src="coleccion de material/MUARQ/DAC/CAM6-RGB.jpg" alt="Project"></div>
+    <div class="smallLeft" id="project2">
+        <div class="filling">
+            <span class="projectName">CASA VIRASORO</span>
+          </div>
+      
+    </div>
+
+
+    <div class="smallRight pushDown" id="project3"><img src="coleccion de material\MUARQ\SouthCargo\CAM 27-SNAPSHOT.jpg"
+        alt="Project"></div>
+    <div class="bigLeft" id="project4"><img src="coleccion de material/MUARQ/Renoir/HALL-09 PS.jpg" alt="Project"></div>
+    <div class="smallLeft" id="project5"><img src="coleccion de material/Monte Hermoso/baño ps.jpg" alt="Project"></div>
+    <div class="smallRight" id="project6"><img src="coleccion de material/THE WALL/Algodon/IMG-20180614-WA0022.jpg" alt="Project"></div>
+    <div class="bigRight" id="project7"><img src="coleccion de material/Monte Hermoso/PS final.jpg" alt="Project"></div>
+    <div class="bigLeft" id="project8"><img src="coleccion de material/MUARQ/DAC/CAM6-RGB.jpg" alt="Project"></div> -->
     <!-- <div class="smallRight"><img src="coleccion de material\Mediateca\pp.jpg" alt="Project"></div>
     <div class="bigRight"><img src="coleccion de material\Mediateca\pp.jpg" alt="Project"></div>
-    <div class="bigLeft"><img src="coleccion de material\Mediateca\pp.jpg" alt="Project"></div> -->
+    <div class="bigLeft"><img src="coleccion de material\Mediateca\pp.jpg" alt="Project"></div>
 
   </div>
 </body>
